final draft with references

--- a/slides/references.bib
+++ b/slides/references.bib
@@ -1,11 +1,311 @@
 % Encoding: UTF-8
-@InCollection{AlexNet,
-  author    = {Alex Krizhevsky and Ilya Sutskever and Geoffrey E. Hinton},
-  title     = {{ImageNet} Classification with Deep Convolutional Neural Networks},
-  booktitle = {Advances in Neural Information Processing Systems 25},
-  publisher = {Curran Associates, Inc.},
-  year      = {2012},
-  pages     = {1097--1105},
+@article{Aarons_Ogungbenro_2010,
+ title={Optimal Design of Pharmacokinetic Studies},
+ volume={106},
+ ISSN={17427835, 17427843},
+ url={https://onlinelibrary.wiley.com/doi/10.1111/j.1742-7843.2009.00533.x},
+ DOI={10.1111/j.1742-7843.2009.00533.x},
+ number={3},
+ journal={Basic \& Clinical Pharmacology \& Toxicology},
+ author={Aarons, Leon and Ogungbenro, Kayode},
+ year={2010},
+ month={Mar},
+ pages={250–255},
+ language={en}
+}
+
+@article{Atkinson_2009,
+ title={Commentary on ‘Designs for dose-escalation trials with quantitative responses’: COMMENTARY},
+ volume={28},
+ ISSN={02776715},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/sim.3736},
+ DOI={10.1002/sim.3736},
+ number={30},
+ journal={Statistics in Medicine},
+ author={Atkinson,
+ A. C.},
+ year={2009},
+ month={Dec},
+ pages={3739–3741},
+ language={en}
+}
+
+@article{Bailey_2009,
+ title={Designs for dose-escalation trials with quantitative responses: DESIGNS FOR DOSE-ESCALATION TRIALS},
+ volume={28},
+ ISSN={02776715},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/sim.3646},
+ DOI={10.1002/sim.3646},
+ number={30},
+ journal={Statistics in Medicine},
+ author={Bailey, R. A.},
+ year={2009},
+ month={Dec},
+ pages={3721–3738},
+ language={en}
+}
+
+@article{Bazzoli_Retout_Mentré_2009,
+ title={Fisher information matrix for nonlinear mixed effects multiple response models: Evaluation of the appropriateness of the first order linearization using a pharmacokinetic/pharmacodynamic model},
+ volume={28},
+ ISSN={02776715, 10970258},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/sim.3573},
+ DOI={10.1002/sim.3573},
+ number={14},
+ journal={Statistics in Medicine},
+ author={Bazzoli, Caroline and Retout, Sylvie and Mentré, France},
+ year={2009},
+ month={Jun},
+ pages={1940–1956},
+ language={en}
+}
+
+@article{Bretz_Dette_Pinheiro_2010,
+ title={Practical considerations for optimal designs in clinical dose finding studies},
+ volume={29},
+ ISSN={02776715},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/sim.3802},
+ DOI={10.1002/sim.3802},
+ number={7–8},
+ journal={Statistics in Medicine},
+ author={Bretz, Frank and Dette, Holger and Pinheiro, Jose C.},
+ year={2010},
+ month={Mar},
+ pages={731–742},
+ language={en}
+}
+
+@article{Bretz_Hsu_Pinheiro_Liu_2008,
+ title={Dose Finding - A Challenge in Statistics},
+ volume={50},
+ ISSN={03233847, 15214036},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/bimj.200810438},
+ DOI={10.1002/bimj.200810438},
+ number={4},
+ journal={Biometrical Journal},
+ author={Bretz, Frank and Hsu, Jason and Pinheiro, José and Liu, Yi},
+ year={2008},
+ month={Aug},
+ pages={480–504},
+ language={en}
+}
+
+@article{Cella_GorterdeVries_Burger_Danhof_DellaPasqua_2010,
+ title={A Model-Based Approach to Dose Selection in Early Pediatric Development},
+ volume={87},
+ ISSN={0009-9236, 1532-6535},
+ url={http://doi.wiley.com/10.1038/clpt.2009.234},
+ DOI={10.1038/clpt.2009.234},
+ number={3},
+ journal={Clinical Pharmacology \& Therapeutics},
+ author={Cella, M and Gorter de Vries, F and Burger, D and Danhof, M and Della Pasqua, O},
+ year={2010},
+ month={Mar},
+ pages={294–302}
+}
+
+@article{Dette_Bretz_Pepelyshev_Pinheiro_2008,
+ title={Optimal Designs for Dose-Finding Studies},
+ volume={103},
+ ISSN={0162-1459, 1537-274X},
+ url={https://www.tandfonline.com/doi/full/10.1198/016214508000000427},
+ DOI={10.1198/016214508000000427},
+ number={483},
+ journal={Journal of the American Statistical Association},
+ author={Dette, Holger and Bretz, Frank and Pepelyshev, Andrey and Pinheiro, José},
+ year={2008},
+ month={Sep},
+ pages={1225–1237},
+ language={en}
+}
+
+@article{Dodds_Hooker_Vicini_2005,
+ title={Robust Population Pharmacokinetic Experiment Design},
+ volume={32},
+ ISSN={1567-567X, 1573-8744},
+ url={http://link.springer.com/10.1007/s10928-005-2102-z},
+ DOI={10.1007/s10928-005-2102-z},
+ number={1},
+ journal={Journal of Pharmacokinetics and Pharmacodynamics},
+ author={Dodds, Michael G. and Hooker, Andrew C. and Vicini, Paolo},
+ year={2005},
+ month={Feb},
+ pages={33–64},
+ language={en}
+}
+
+@article{Dragalin_Fedorov_2006,
+ title={Adaptive designs for dose-finding based on efficacy–toxicity response},
+ volume={136},
+ ISSN={03783758},
+ url={https://linkinghub.elsevier.com/retrieve/pii/S0378375805001862},
+ DOI={10.1016/j.jspi.2005.08.005},
+ number={6},
+ journal={Journal of Statistical Planning and Inference},
+ author={Dragalin, Vladimir and Fedorov, Valerii},
+ year={2006},
+ month={Jun},
+ pages={1800–1823},
+ language={en}
+}
+
+@article{Duffull_Retout_Mentré_2002,
+ title={The use of simulated annealing for finding optimal population designs},
+ volume={69},
+ ISSN={01692607},
+ url={https://linkinghub.elsevier.com/retrieve/pii/S016926070100178X},
+ DOI={10.1016/S0169-2607(01)00178-X},
+ number={1},
+ journal={Computer Methods and Programs in Biomedicine},
+ author={Duffull, Stephen B. and Retout, Sylvie and Mentré, France},
+ year={2002},
+ month={Jul},
+ pages={25–35},
+ language={en}
+}
+
+@article{Hooker_Vicini_2005,
+ title={Simultaneous population optimal design for pharmacokinetic-pharmacodynamic experiments},
+ volume={7},
+ ISSN={1550-7416},
+ url={http://link.springer.com/10.1208/aapsj070476},
+ DOI={10.1208/aapsj070476},
+ number={4},
+ journal={The AAPS Journal},
+ author={Hooker, Andrew and Vicini, Paolo},
+ year={2005},
+ month={Dec},
+ pages={E759–E785},
+ language={en}
+}
+
+@article{Hooker_Foracchia_Dodds_Vicini_2003,
+ title={An Evaluation of Population D-Optimal Designs Via Pharmacokinetic Simulations},
+ volume={31},
+ ISSN={0090-6964},
+ url={http://link.springer.com/10.1114/1.1533074},
+ DOI={10.1114/1.1533074},
+ number={1},
+ journal={Annals of Biomedical Engineering},
+ author={Hooker, Andrew C. and Foracchia, Marco and Dodds, Michael G. and Vicini, Paolo},
+ year={2003},
+ month={Jan},
+ pages={98–111},
+ language={en}
+}
+
+@article{Lledó-García_Hennig_Nyberg_Hooker_Karlsson_2012,
+ title={Ethically Attractive Dose-Finding Designs for Drugs With a Narrow Therapeutic Index},
+ volume={52},
+ ISSN={00912700},
+ url={http://doi.wiley.com/10.1177/0091270010390041},
+ DOI={10.1177/0091270010390041},
+ number={1},
+ journal={The Journal of Clinical Pharmacology},
+ author={Lledó-García, Rocío and Hennig, Stefanie and Nyberg, Joakim and Hooker, Andrew C. and Karlsson, Mats O.},
+ year={2012},
+ month={Jan},
+ pages={29–38},
+ language={en}
+}
+
+@article{Maloney_Karlsson_Simonsson_2007,
+ title={Optimal Adaptive Design in Clinical Drug Development: A Simulation Example},
+ volume={47},
+ ISSN={00912700},
+ url={http://doi.wiley.com/10.1177/0091270007308033},
+ DOI={10.1177/0091270007308033},
+ number={10},
+ journal={The Journal of Clinical Pharmacology},
+ author={Maloney, Alan and Karlsson, Mats O. and Simonsson, Ulrika S. H.},
+ year={2007},
+ month={Oct},
+ pages={1231–1243},
+ language={en}
+}
+
+@article{Mentre_1997,
+ title={Optimal design in random-effects regression models},
+ volume={84},
+ ISSN={0006-3444,
+ 1464-3510},
+ url={https://academic.oup.com/biomet/article-lookup/doi/10.1093/biomet/84.2.429},
+ DOI={10.1093/biomet/84.2.429},
+ number={2},
+ journal={Biometrika},
+ author={Mentre, F},
+ year={1997},
+ month={Jun},
+ pages={429–442},
+ language={en}
+}
+
+@article{Nyberg_Karlsson_Hooker_2009,
+ title={Simultaneous optimal experimental design on dose and sample times},
+ volume={36},
+ ISSN={1567-567X,
+ 1573-8744},
+ url={http://link.springer.com/10.1007/s10928-009-9114-z},
+ DOI={10.1007/s10928-009-9114-z},
+ number={2},
+ journal={Journal of Pharmacokinetics and Pharmacodynamics},
+ author={Nyberg, Joakim and Karlsson, Mats O. and Hooker, Andrew C.},
+ year={2009},
+ month={Apr},
+ pages={125–145},
+ language={en}
+}
+
+@article{Retout_Comets_Samson_Mentré_2007,
+ title={Design in nonlinear mixed effects models: Optimization using the Fedorov–Wynn algorithm and power of the Wald test for binary covariates},
+ volume={26},
+ ISSN={02776715,
+ 10970258},
+ url={https://onlinelibrary.wiley.com/doi/10.1002/sim.2910},
+ DOI={10.1002/sim.2910},
+ number={28},
+ journal={Statistics in Medicine},
+ author={Retout, Sylvie and Comets, Emmanuelle and Samson, Adeline and Mentré, France},
+ year={2007},
+ month={Dec},
+ pages={5162–5179},
+ language={en}
+}
+
+@article{Retout_Duffull_Mentré_2001,
+ title={Development and implementation of the population Fisher information matrix for the evaluation of population pharmacokinetic designs},
+ volume={65},
+ ISSN={01692607},
+ url={https://linkinghub.elsevier.com/retrieve/pii/S0169260700001176},
+ DOI={10.1016/S0169-2607(00)00117-6},
+ number={2},
+ journal={Computer Methods and Programs in Biomedicine},
+ author={Retout, Sylvie and Duffull, Stephen and Mentré, France},
+ year={2001},
+ month={May},
+ pages={141–151},
+ language={en}
+}
+
+@article{Tod_Mentré_Merlé_Mallet_1998,
+ title={Robust Optimal Design for the Estimation of Hyperparameters in Population Pharmacokinetics},
+ volume={26},
+ ISSN={0090-466X},
+ url={https://doi.org/10.1023/A:1020703007613},
+ DOI={10.1023/A:1020703007613},
+ number={6},
+ journal={Journal of Pharmacokinetics and Biopharmaceutics},
+ author={Tod, Michel and Mentré, France and Merlé, Yann and Mallet, Alain},
+ year={1998},
+ month={Dec},
+ pages={689–716},
+ language={en}
+}
+
+@article{strouwen2021optimal,
+ title={Optimal Design of Dynamic Experiments in Bioscience Engineering},
+ author={Strouwen, Arno},
+ year={2021}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
