--- a/slides/beamercolorthemepureminimalistic.sty
+++ b/slides/beamercolorthemepureminimalistic.sty
@@ -34,8 +34,9 @@
 \definecolor{pureminimalistic@text@whiter_gray}{RGB}{200,200,200}
 \definecolor{pureminimalistic@text@red}{RGB}{190,15,30}
 \definecolor{pureminimalistic@text@white}{RGB}{255, 255, 255}
+\definecolor{pureminimalistic@text@pumasblue}{RGB}{0, 40, 149}
 
-\newcommand{\beamertitlecolor}{pureminimalistic@text@red}
+\newcommand{\beamertitlecolor}{pureminimalistic@text@pumasblue}
 
 \ifthenelse{\boolean{darkmode}}{
   \newcommand{\beamertextcolor}{pureminimalistic@text@white}%
